--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (213)</h2>
+                <h2>APWorlds (216)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
@@ -62,6 +62,7 @@
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ARobotNamedFight">A Robot Named Fight! (PC)</a></small>
                 <small><a href="#AShortHike">A Short Hike (PC)</a></small>
+                <small><a href="#ActRaiser">ActRaiser (SNES)</a></small>
                 <small><a href="#Adventure">Adventure (2600)</a></small>
                 <small><a href="#AgainstTheStorm">Against the Storm (PC)</a></small>
                 <small><a href="#AirDelivery">Air Delivery (PICO-8)</a></small>
@@ -130,9 +131,11 @@
                 <small>&emsp;<a href="#FinalFantasy6">Final Fantasy VI (SNES)</a></small>
                 <small>&emsp;<a href="#FinalFantasy12OpenWorld">Final Fantasy XII: Open World (PC)</a></small>
                 <small>&emsp;<a href="#FinalFantasy12TrialMode">Final Fantasy XII: Trial Mode (PC)</a></small>
+                <small>[Final Fantasy Franchise - Tactics Series]</small>
+                <small>&emsp;<a href="#FinalFantasyTacticsAdvance">Final Fantasy Tactics Advance (GBA)</a></small>
+                <small>&emsp;<a href="#FinalFantasyTacticsA2GrimoireOfTheRift">Final Fantasy Tactics A2: Grimoire of the Rift (DS)</a></small>
                 <small>[Final Fantasy Franchise - Others]</small>
                 <small>&emsp;<a href="#FinalFantasyMysticQuest">Final Fantasy: Mystic Quest (SNES)</a></small>
-                <small>&emsp;<a href="#FinalFantasyTacticsAdvance">Final Fantasy Tactics Advance (GBA)</a></small>
                 <br />
                 <small><a href="#FireEmblemTheSacredStones">Fire Emblem: The Sacred Stones (GBA)</a></small>
                 <br />
@@ -140,6 +143,7 @@
                 <small>&emsp;<a href="#FNaFWorld">FNaF World (PC)</a></small>
                 <small>&emsp;<a href="#FreddyFazbearsPizzeriaSimulator">Freddy Fazbear's Pizzeria Simulator (PC)</a></small>
                 <br />
+                <small><a href="#FlipWitchForbiddenSexHex">FlipWitch - Forbidden Sex Hex (PC - 18+)</a></small>
                 <small><a href="#GauntletLegends">Gauntlet Legends (N64)</a></small>
                 <small><a href="#GrimDawn">Grim Dawn (PC)</a></small>
                 <small><a href="#GuildWars2">Guild Wars 2 (PC)</a></small>
@@ -151,8 +155,8 @@
                 <small><a href="#HollowKnight">Hollow Knight (PC)</a></small>
                 <br />
                 <small>[HuniePop Franchise]</small>
-                <small>&emsp;<a href="#HuniePop">HuniePop (PC)</a></small>
-                <small>&emsp;<a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC)</a></small>
+                <small>&emsp;<a href="#HuniePop">HuniePop (PC - 18+)</a></small>
+                <small>&emsp;<a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC - 18+)</a></small>
                 <br />
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
                 <small><a href="#Increlution">Increlution (PC)</a></small>
@@ -161,7 +165,7 @@
                 <small><a href="#IttleDew2">Ittle Dew 2+ (PC)</a></small>
                 <small><a href="#JakAndDaxterThePrecursorLegacy">Jak and Daxter: The Precursor Legacy (PS2)</a></small>
                 <small><a href="#KeepTalkingAndNobodyExplodes">Keep Talking and Nobody Explodes (PC)</a></small>
-                <small><a href="#Kindergarten2">Kindergarten 2 (PC)</a></small>
+                <small><a href="#Kindergarten2">Kindergarten 2 (PC - 18+)</a></small>
                 <br />
                 <small>[Kingdom Hearts Franchise]</small>
                 <small>&emsp;<a href="#KINGDOMHEARTSBirthBySleepFINALMIX">KINGDOM HEARTS Birth by Sleep FINAL MIX (PC)</a></small>
@@ -245,8 +249,8 @@
                 <small><a href="#Raft">Raft (PC)</a></small>
                 <br />
                 <small>[Resident Evil Franchise]</small>
-                <small>&emsp;<a href="#ResidentEvil2">Resident Evil 2 (Remake) (PC)</a></small>
-                <small>&emsp;<a href="#ResidentEvil3">Resident Evil 3 (Remake) (PC)</a></small>
+                <small>&emsp;<a href="#ResidentEvil2">Resident Evil 2 (Remake) (PC - 18+)</a></small>
+                <small>&emsp;<a href="#ResidentEvil3">Resident Evil 3 (Remake) (PC - 18+)</a></small>
                 <br />
                 <small><a href="#Reventure">Reventure (PC)</a></small>
                 <small><a href="#RiftWizard">Rift Wizard (PC)</a></small>
@@ -280,6 +284,7 @@
                 <small><a href="#SoulBlazer">Soul Blazer (SNES)</a></small>
                 <small><a href="#Spelunker">Spelunker (NES)</a></small>
                 <small><a href="#Spelunky2">Spelunky 2 (PC)</a></small>
+                <!-- <small><a href="#SpinRhythmXD">Spin Rhythm XD (PC)</a></small> -->
                 <small><a href="#SpongeBobSquarePantsBattleForBikiniBottom">SpongeBob SquarePants: Battle For Bikini Bottom (GC)</a></small>
                 <small><a href="#Stacklands">Stacklands (PC)</a></small>
                 <small><a href="#StarWarsEpisode1Racer">Star Wars: Episode I - Racer (PC)</a></small>
@@ -373,8 +378,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3026842601">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/Fouton/HatInTimeRando-Poptracker/releases">Link</a>]</li>
-                    <li><strong>Tracker (Alternate)</strong> [<a href="https://github.com/Mysteryem/ahit-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Mysteryem/ahit-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/A%20Hat%20in%20Time/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257453386073374842">Link</a>]</li>
                 </ul>
@@ -396,6 +400,15 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/chandler05/shorthike-archipelago-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/A%20Short%20Hike/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389725922787389">Link</a>]</li>
+                </ul>
+
+                <h3><span id="ActRaiser"></span> ActRaiser (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1296658399672668181">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1296683088566288488">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1295980708619227148">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1113529234800005181">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Adventure"></span> Adventure (2600)</h3>
@@ -840,7 +853,7 @@
                 <h3><span id="FinalFantasy4"></span><span id="FinalFantasy4FreeEnterprise"></span> Final Fantasy IV (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/Rosalie-A/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1170144930610557008/1297275852467212299">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/seto10987/Final-Fantasy-4-Free-Enterprise-AP-Poptracker-Pack/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170144930610557008">Link</a>]</li>
                 </ul>
@@ -878,6 +891,21 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1177092493981007922">Link</a>]</li>
                 </ul>
 
+                <h3><span id="FinalFantasyTacticsAdvance"></span> Final Fantasy Tactics Advance (GBA)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/spicynun/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1100823015819837449/1211746202144743504">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1100823015819837449">Link</a>]</li>
+                </ul>
+
+                <h3><span id="FinalFantasyTacticsA2GrimoireOfTheRift"></span> Final Fantasy Tactics A2: Grimoire of the Rift (DS)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Rurusachi/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1296095764518277143">Link</a>]</li>
+                </ul>
+
                 <h3><span id="FinalFantasyMysticQuest"></span> Final Fantasy: Mystic Quest (SNES)</h3>
 
                 <ul>
@@ -885,14 +913,6 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/D-Skye/ffmq-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Final%20Fantasy%20Mystic%20Quest/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192237281298362539">Link</a>]</li>
-                </ul>
-
-                <h3><span id="FinalFantasyTacticsAdvance"></span> Final Fantasy Tactics Advance (GBA)</h3>
-
-                <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/spicynun/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1100823015819837449/1211746202144743504">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1100823015819837449">Link</a>]</li>
                 </ul>
 
                 <h3><span id="FireEmblemTheSacredStones"></span> Fire Emblem: The Sacred Stones (GBA)</h3>
@@ -917,6 +937,13 @@
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1276327269995905055">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
+                </ul>
+
+                <h3><span id="FlipWitchForbiddenSexHex"></span> FlipWitch - Forbidden Sex Hex (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Witchybun/FlipwitchAPClient/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1179972168910639225">Link</a>]</li>
                 </ul>
 
                 <h3><span id="GauntletLegends"></span> Gauntlet Legends (N64)</h3>
@@ -1014,6 +1041,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-APWorld/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HunniePop2-Archipelago-Client/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-PopTracker-AP-Plugin/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1186790496505450526">Link</a>]</li>
                 </ul>
 
@@ -1838,6 +1866,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1142626744629735555">Link</a>]</li>
                 </ul>
 
+                <!-- <h3><span id="SpinRhythmXD"></span> Spin Rhythm XD (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1296398871513141269">Link</a>]</li>
+                </ul> -->
+
                 <h3><span id="SpongeBobSquarePantsBattleForBikiniBottom"></span><span id="BattleForBikiniBottom"></span> SpongeBob SquarePants: Battle For Bikini Bottom (GC)</h3>
 
                 <ul>
@@ -1992,7 +2028,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/tanjo3/tww_apworld/releases">Link</a>]</li>
                     <li><strong>Patcher</strong> [<a href="https://github.com/tanjo3/wwrando/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/Ouro-dev/ww-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Mysteryem/ww-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/tanjo3/tww_apworld/blob/master/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1080383306748678165">Link</a>]</li>
                 </ul>
