--- a/index.html
+++ b/index.html
@@ -45,24 +45,58 @@
                     </p>
                 </header>
 
-                <!-- <h2 id="W202442">Week of October 14-20, 2024</h2>
+                <h2 id="W202442">Week of October 14-20, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy IV [<a href="apworlds.html#FinalFantasy4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Osu! [<a href="apworlds.html#Osu">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
-                </ul> -->
+                    <li><strong>Game Mod Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> ActRaiser [<a href="apworlds.html#ActRaiser">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Final Fantasy Tactics A2: Grimoire of the Rift [<a href="apworlds.html#FinalFantasyTacticsA2GrimoireOfTheRift">Link</a>]</li>
+                    <li><strong>New APWorld</strong> FlipWitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                </ul>
 
                 <h2 id="W202441">Week of October 7-13, 2024</h2>
 
