--- a/apworlds.html
+++ b/apworlds.html
@@ -939,7 +939,7 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
                 </ul>
 
-                <h3><span id="FlipWitchForbiddenSexHex"></span> FlipWitch - Forbidden Sex Hex (PC)</h3>
+                <h3><span id="FlipWitchForbiddenSexHex"></span> FlipWitch - Forbidden Sex Hex (PC - 18+)</h3>
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Witchybun/FlipwitchAPClient/releases">Link</a>]</li>
@@ -1028,7 +1028,7 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959203442570715176">Link</a>]</li>
                 </ul>
 
-                <h3><span id="HuniePop"></span> HuniePop (PC)</h3>
+                <h3><span id="HuniePop"></span> HuniePop (PC - 18+)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop-APWorld/releases">Link</a>]</li>
@@ -1036,7 +1036,7 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1291278671621128222">Link</a>]</li>
                 </ul>
 
-                <h3><span id="HuniePop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
+                <h3><span id="HuniePop2DoubleDate"></span> HuniePop 2: Double Date (PC - 18+)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-APWorld/releases">Link</a>]</li>
@@ -1107,7 +1107,7 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1058549067107532840">Link</a>]</li>
                 </ul>
 
-                <h3><span id="Kindergarten2"></span> Kindergarten 2 (PC)</h3>
+                <h3><span id="Kindergarten2"></span> Kindergarten 2 (PC - 18+)</h3>
 
                 <ul>
                     <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/agilbert1412/Archipelagarten/releases">Link</a>]</li>
@@ -1631,7 +1631,7 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/937206960472883243">Link</a>]</li>
                 </ul>
 
-                <h3><span id="ResidentEvil2"></span<span id="ResidentEvil2Remake"></span> Resident Evil 2 (Remake) (PC)</h3>
+                <h3><span id="ResidentEvil2"></span<span id="ResidentEvil2Remake"></span> Resident Evil 2 (Remake) (PC - 18+)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_World/releases">Link</a>]</li>
@@ -1640,7 +1640,7 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1259648589039272028">Link</a>]</li>
                 </ul>
 
-                <h3><span id="ResidentEvil3"></span><span id="ResidentEvil3Remake"></span> Resident Evil 3 (Remake) (PC)</h3>
+                <h3><span id="ResidentEvil3"></span><span id="ResidentEvil3Remake"></span> Resident Evil 3 (Remake) (PC - 18+)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/dontjoome/RE3R_AP_World/releases">Link</a>]</li>
