--- a/apworlds.html
+++ b/apworlds.html
@@ -51,9 +51,10 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (216)</h2>
+                <h2>APWorlds (219)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
+                <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
                 <small>&emsp;<a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
                 <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
@@ -102,7 +103,11 @@
                 <small><a href="#CrossCode">CrossCode (PC)</a></small>
                 <small><a href="#Crystalis">Crystalis (NES)</a></small>
                 <small><a href="#Cuphead">Cuphead (PC)</a></small>
+                <br />
+                <small>[Dark Souls Franchise]</small>
+                <small><a href="#DarkSoulsRemastered">Dark Souls: Remastered (PC)</a></small>
                 <small><a href="#DarkSouls3">Dark Souls III (PC)</a></small>
+                <br />
                 <small><a href="#DigimonWorld">Digimon World (PSX)</a></small>
                 <small><a href="#DLCQuest">DLC Quest (PC)</a></small>
                 <small><a href="#DomeKeeper">Dome Keeper (PC)</a></small>
@@ -336,6 +341,7 @@
                 <small>&emsp;<a href="#SuperMarioWorld2YoshisIsland">Super Mario World 2: Yoshi's Island (SNES)</a></small>
                 <br />
                 <small>[Yu-Gi-Oh! Franchise]</small>
+                <small>&emsp;<a href="#YuGiOhDungeonDiceMonsters">Yu-Gi-Oh! Dungeon Dice Monsters (GBA)</a></small>
                 <small>&emsp;<a href="#YuGiOhUltimateMastersWCT2006">Yu-Gi-Oh! Ultimate Masters: WCT 2006 (GBA)</a></small>
                 <small>&emsp;<a href="#YuGiOhForbiddenMemories">Yu-Gi-Oh! Forbidden Memories (PSX)</a></small>
                 <br />
@@ -345,6 +351,13 @@
                 <br />
 
                 <h2>Meta APWorlds</h2>
+
+                <h3><span id="APBingo"></span> APBingo (Meta)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/APBingo/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252051532971638784">Link</a>]</li>
+                </ul>
 
                 <h3 style="padding-top:24px"><span id="Manual"></span> Manual (Meta)</h3>
 
@@ -409,7 +422,7 @@
                 <h3><span id="ActRaiser"></span> ActRaiser (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1296658399672668181">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1300291470665846886">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1296683088566288488">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1295980708619227148">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1113529234800005181">Link</a>]</li>
@@ -716,6 +729,16 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1050929729844297789">Link</a>]</li>
                 </ul>
 
+                <h2>Dark Souls Franchise</h2>
+
+                <h3><span id="DarkSoulsRemastered"></span> Dark Souls: Remastered (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/ArsonAssassin/DSAP/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/ArsonAssassin/Archipelago.Core/wiki/How-to-start-playing-a-game-using-this-library">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1092600948548976680">Link</a>]</li>
+                </ul>
+
                 <h3><span id="DarkSouls3"></span> Dark Souls III (PC)</h3>
 
                 <ul>
@@ -726,6 +749,8 @@
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Dark%20Souls%20III/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1005246392329052220">Link</a>]</li>
                 </ul>
+
+                <hr />
 
                 <h3><span id="DigimonWorld"></span> Digimon World (PSX)</h3>
 
@@ -795,6 +820,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong></li> 1.2.0+ [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/doom-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/DOOM%201993/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148329739996643348">Link</a>]</li>
@@ -805,6 +831,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong></li> 1.2.0+ [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/doomii-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/DOOM%20II/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236810487738510">Link</a>]</li>
@@ -1047,6 +1074,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong></li> 1.2.0+ [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Forsaken-angel/heretic-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Heretic/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236842515439627">Link</a>]</li>
@@ -1562,6 +1590,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/DaftBrit/NoitaArchipelago/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1109174779619057795/1299183686792773734">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/ScipioWright/Noita-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Noita/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1109174779619057795">Link</a>]</li>
@@ -1921,6 +1950,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/choatix/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/jxjacob/shadow-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1142558464242094200/1291501105267867760">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1142558464242094200">Link</a>]</li>
                 </ul>
@@ -2325,6 +2355,14 @@
                 
                 <h2>Yu-Gi-Oh! Franchise</h2>
 
+                <h3><span id="YuGiOhDungeonDiceMonsters"></span> Yu-Gi-Oh! Dungeon Dice Monsters (GBA)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/JustinMarshall98/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/JustinMarshall98/Archipelago/blob/main/worlds/yugiohddm/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1298768685510561842">Link</a>]</li>
+                </ul>
+
                 <h3><span id="YuGiOhUltimateMastersWCT2006"></span> Yu-Gi-Oh! Ultimate Masters: WCT 2006 (GBA)</h3>
 
                 <ul>
@@ -2332,7 +2370,6 @@
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Yu-Gi-Oh!%202006/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257454640950149151">Link</a>]</li>
                 </ul>
-
 
                 <h3><span id="YuGiOhForbiddenMemories"></span> Yu-Gi-Oh! Forbidden Memories (PSX)</h3>
 
