--- a/index.html
+++ b/index.html
@@ -45,6 +45,66 @@
                     </p>
                 </header>
 
+                <h2 id="W202443">Week of October 21-27, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ActRaiser [<a href="apworlds.html#ActRaiser">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics A2: Grimoire of the Rift [<a href="apworlds.html#FinalFantasyTacticsA2GrimoireOfTheRift">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> FlipWitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project Diva Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDivaMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> KINGDOM HEARTS FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSFINALMIX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> FlipWitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> DOOM 1993 [<a href="apworlds.html#DOOM1993">Link</a>]</li>
+                    <li><strong>New Beta Game Mod</strong> DOOM II [<a href="apworlds.html#DOOM2">Link</a>]</li>
+                    <li><strong>New Beta Game Mod</strong> Heretic [<a href="apworlds.html#Heretic">Link</a>]</li>
+                    <li><strong>New Beta Game Mod</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> APBingo [<a href="apworlds.html#APBingo">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Yu-Gi-Oh! Dungeon Dice Monsters [<a href="apworlds.html#YuGiOhDungeonDiceMonsters">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Adventure [<a href="apworlds.html#Adventure">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Shadow the Hedgehog [<a href="apworlds.html#ShadowTheHedgehog">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202442">Week of October 14-20, 2024</h2>
 
                 <ul>
