--- a/apworlds.html
+++ b/apworlds.html
@@ -105,8 +105,8 @@
                 <small><a href="#Cuphead">Cuphead (PC)</a></small>
                 <br />
                 <small>[Dark Souls Franchise]</small>
-                <small><a href="#DarkSoulsRemastered">Dark Souls: Remastered (PC)</a></small>
-                <small><a href="#DarkSouls3">Dark Souls III (PC)</a></small>
+                <small>&emsp;<a href="#DarkSoulsRemastered">Dark Souls: Remastered (PC)</a></small>
+                <small>&emsp;<a href="#DarkSouls3">Dark Souls III (PC)</a></small>
                 <br />
                 <small><a href="#DigimonWorld">Digimon World (PSX)</a></small>
                 <small><a href="#DLCQuest">DLC Quest (PC)</a></small>
@@ -352,14 +352,14 @@
 
                 <h2>Meta APWorlds</h2>
 
-                <h3><span id="APBingo"></span> APBingo (Meta)</h3>
+                <h3 style="padding-top:24px"><span id="APBingo"></span> APBingo (Meta)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/APBingo/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252051532971638784">Link</a>]</li>
                 </ul>
 
-                <h3 style="padding-top:24px"><span id="Manual"></span> Manual (Meta)</h3>
+                <h3><span id="Manual"></span> Manual (Meta)</h3>
 
                 <ul>
                     <li><strong>Client</strong> [<a href="https://github.com/ManualForArchipelago/Manual/releases">Link</a>]</li>
