--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (219)</h2>
+                <h2>APWorlds (221)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -334,8 +334,10 @@
                 <small>&emsp;<a href="#WarioLandSuperMarioLand3">Wario Land: Super Mario Land 3 (GB)</a></small>
                 <small>&emsp;<a href="#WarioLand4">Wario Land 4 (GBA)</a></small>
                 <br />
+                <small><a href="#WateryWords">Watery Words (Web)</a></small>
                 <small><a href="#YachtDice">Yacht Dice (Web)</a></small>
                 <small><a href="#YookaLaylee">Yooka-Laylee (PC)</a></small>
+                <small><a href="#XCOM2WarOfTheChosen">XCOM 2: War of the Chosen (PC)</a></small>
                 <br />
                 <small>[Yoshi Franchise]</small>
                 <small>&emsp;<a href="#SuperMarioWorld2YoshisIsland">Super Mario World 2: Yoshi's Island (SNES)</a></small>
@@ -2099,7 +2101,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1286692984288575661/1288206970393985149">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1286692984288575661/1301646666104836196">Link</a>]</li>
                     <li><strong>Tracker</strong> Opened from the game client (Magpie button)</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Links%20Awakening%20DX/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090819435893362768">Link</a>]</li>
@@ -2321,6 +2323,14 @@
 
                 <hr />
 
+                <h3><span id="WateryWords"></span> Watery Words (Web)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spineraks-org/ArchipelagoWateryWords/releases">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://watery-words-ap.netlify.app">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1292965246847418388">Link</a>]</li>
+                </ul>
+
                 <h3><span id="YachtDice"></span> Yacht Dice (Web)</h3>
 
                 <ul>
@@ -2337,6 +2347,15 @@
                     <li><strong>Game Mod</strong> [<a href="https://github.com/SunnyBat/YLRandomizer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Awareqwx/Archipelago/blob/ukelele/worlds/yooka_laylee/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1103936661156536330">Link</a>]</li>
+                </ul>
+
+                <h3><span id="XCOM2WarOfTheChosen"></span> XCOM 2: War of the Chosen (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/MaxReinstadler/X2WOTCArchipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3281191663">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/MaxReinstadler/X2WOTCArchipelago/blob/main/worlds/x2wotc/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1037751568700805141">Link</a>]</li>
                 </ul>
 
                 <h2>Yoshi Franchise</h2>
