--- a/apworlds.html
+++ b/apworlds.html
@@ -1006,7 +1006,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Witchybun/FlipwitchAPClient/releases">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1179972168910639225">Link</a>]</li>
+                    <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1303773960873185320">Link</a>]</li>
                 </ul>
 
                 <h3><span id="GauntletLegends"></span> Gauntlet Legends (N64)</h3>
@@ -1108,7 +1108,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-APWorld/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HunniePop2-Archipelago-Client/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-PopTracker-AP-Plugin/releases">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1186790496505450526">Link</a>]</li>
+                    <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1302838551679074415">Link</a>]</li>
                 </ul>
 
                 <hr />
@@ -1903,7 +1903,7 @@
                 <h3><span id="SimonTathamsPortablePuzzleCollection"></span> Simon Tatham's Portable Puzzle Collection (Web)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1278733078516207719/1282558989627949117">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/ishanpm/ap-sgtpuzzles-web/releases">Link</a>]</li>
                     <li><strong>Website</strong> [<a href="https://ishanpm.github.io/ap-sgtpuzzles-web/">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278733078516207719">Link</a>]</li>
                 </ul>
