--- a/apworlds.html
+++ b/apworlds.html
@@ -709,6 +709,7 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/CodeTriangle/CCMultiworldRandomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/lurch9229/CrossCode-Poptracker-AP/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/CodeTriangle/CCMultiworldRandomizer/wiki/Setup">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1128180904926396437">Link</a>]</li>
                 </ul>
 
